# ComfyUI_FunCineForge

./: README.md  __init__.py  clean_srt.py  clean_video.py  funcineforge_node.py  infer.py  model_loader_utils.py  normalize_trim.py  predata.py  pyproject.toml  requirements.txt  requirements_origin.txt  setup.py  utils.py
example_workflows/: funcineforge.json
exps/: infer.py  infer.sh
exps/data/: demo.jsonl  ref.npy
exps/data/embs_video/: en_monologue_1.pkl  en_monologue_4.pkl  en_monologue_5.pkl  en_monologue_6.pkl  en_monologue_8.pkl  zh_monologue_5.pkl  zh_narration_2.pkl
exps/decode_conf/: decode.yaml  ds_stage0_fp32.json
funcineforge/: __init__.py  register.py
funcineforge/auto/: auto_frontend.py  auto_model.py
funcineforge/datasets/: __init__.py  datasets.py  index_ds.py
funcineforge/download/: download_model_from_hub.py  name_maps_from_hub.py
funcineforge/face/: face_recognition.py
funcineforge/models/: causal_hifigan.py  flow_matching_model.py  inference_model.py  language_model.py
funcineforge/tokenizer/: tokenizer.py
funcineforge/utils/: export_utils.py  hinter.py  load_pretrained_model.py  load_utils.py
speaker_diarization/: README.md
speaker_diarization/conf/: decode.yaml
speaker_diarization/local/: cluster_and_postprocess.py  extract_speech_embeddings.py  extract_visual_embeddings.py  filter_clean_list.py  overlap_detection.py  prepare_subseg_json.py  vision_processer.py  voice_activity_detection.py
speaker_diarization/speaker_diarization_sample/: run.py
speech_separation/: run.py  utils.py
video_clip/: videoclipper.py
(+24 files in other folders)
